--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="cart-icon">
                     <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-count">3</span>
+                    <span class="cart-count">0</span>
                 </div>
             </div>
             
@@ -174,7 +174,7 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>Успех - качество, которому доверяют</h2>
-                <p>Мы работаем на рынке с 2015 года и за это время заслужили доверие тысяч покупателей. Наша миссия -
+                <p>Мы работаем на рынке с 2025 года и за это время заслужили доверие тысяч покупателей. Наша миссия -
                     сделать покупку продуктов удобной, быстрой и приятной.</p>
                 <p>Мы сотрудничаем напрямую с фермерскими хозяйствами и проверенными производителями, чтобы
                     гарантировать свежесть и качество каждого товара.</p>
@@ -249,7 +249,7 @@
                     <i class="fas fa-map-marker-alt"></i>
                     <div class="contact-text">
                         <h3>Адрес</h3>
-                        <p>Москва, ул. Примерная, 15</p>
+                        <p>Вешкайма, ул. 50 лет СССР, 5</p>
                         <p>Ежедневно с 8:00 до 23:00</p>
                     </div>
                 </div>
@@ -266,12 +266,7 @@
 
             <div class="map-container">
                 <h3>Мы на карте</h3>
-                <div class="map-placeholder">
-                    <i class="fas fa-map-marked-alt"></i>
-                    <span>Карта расположения магазина</span>
-                </div>
-            </div>
-        </div>
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Abc0d984f25079491b15e6e0ed496025128e7383e2dd969e332cf7a79aa4e5313&amp;source=constructor" width="600" height="450" frameborder="0"></iframe>        </div>
     </section>
 
     <!-- Подвал -->
@@ -300,18 +295,18 @@
 
             <div class="footer-section">
                 <h3>Полезные ссылки</h3>
-                <a href="#about">О компании</a>
-                <a href="#contacts">Доставка и оплата</a>
-                <a href="#contacts">Контакты</a>
-                <a href="#">Акции</a>
-                <a href="#">Новости</a>
+                <a href="#">Главная</a>
+                <a href="#">Категории</a>
+                <a href="#">Товары</a>
+                <a href="#">О нас</a>
+                <a href="#">Контакт</a>
             </div>
 
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <p><i class="fas fa-phone"></i> +7 (495) 123-45-67</p>
                 <p><i class="fas fa-envelope"></i> info@uspekh.ru</p>
-                <p><i class="fas fa-map-marker-alt"></i> Москва, ул. Примерная, 15</p>
+                <p><i class="fas fa-map-marker-alt"></i>Вешкайма, ул. 50 лет СССР, 5</p>
             </div>
         </div>
 
